--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="loader none">
+        <div class="loader--circle"></div>
+        <h3>loading...</h3>
+    </div>
     
+    <div class="products">
+        
+    </div>
 
     <script src="app.js"></script>
 </body>
