added some styles on the header to determine the future business code to do

--- a/index.html
+++ b/index.html
@@ -14,7 +14,19 @@
         <h3>loading...</h3>
     </div>
     <header class="header">
-        
+        <div class="header--left">
+            <a href="https://fortnite-api.com/" class="logo--link">
+                Fortnite-API
+            </a>
+        </div>
+        <div class="header--right">
+            <ul class="links-list">
+                <li><a href="#">Sign In</a></li>
+                <li><a href="#">Sign Up</a></li>
+                <li><a href="#">Cart</a></li>
+                <li><a href="#">Profile</a></li>
+            </ul>
+        </div>
     </header>
     <div class="products">
         
