did some moduling ,pagination and the major thing is cart is done by half

--- a/index.html
+++ b/index.html
@@ -21,17 +21,27 @@
         </div>
         <div class="header--right">
             <ul class="links-list">
-                <li><a href="#">Sign In</a></li>
-                <li><a href="#">Sign Up</a></li>
-                <li><a href="#">Cart</a></li>
-                <li><a href="#">Profile</a></li>
+                <li><a href="./pages/SignIn.html">Sign In</a></li>
+                <li><a href="./pages/SignUp.html">Sign Up</a></li>
+                <li><a href="./pages/Cart.html">Cart</a></li>
+                <li><a href="./pages/Profile.html">Profile</a></li>
             </ul>
         </div>
     </header>
-    <div class="products">
-        
-    </div>
-
+    <main class="main">
+        <section class="catalog">
+            <div class="container">
+                <div class="catalog--info">
+                    <h3 class="title">Catalog</h3>
+                </div>
+                <div class="products">
+                    
+                </div>
+            </div>
+        </section>
+    </main>
+    <script src="./scripts/Functions.js"></script>
+    <script src="./scripts/Classes.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
