--- a/index.html
+++ b/index.html
@@ -1,47 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
 
-    <link rel="stylesheet" href="styles/css/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="styles/css/style.css" />
+  </head>
+  <body>
     <div class="loader none">
-        <div class="loader--circle"></div>
-        <h3>loading...</h3>
+      <div class="loader--circle"></div>
+      <h3>loading...</h3>
     </div>
+    <div class="additionalInfo--message none"></div>
+    <div class="additionalInfo--message none"></div>
+    <div class="additionalInfo--message none"></div>
+    <div class="additionalInfo--message none"></div>
+    <div class="additionalInfo--message none"></div>
+    <div class="additionalInfo--message none"></div>
+    <div class="additionalInfo--message none"></div>
+    <div class="additionalInfo--message none"></div>
+    <div class="additionalInfo--message none"></div>
+    <div class="additionalInfo--message none"></div>
+    <div class="additionalInfo--message none"></div>
+    <div class="additionalInfo--message none"></div>
     <header class="header">
-        <div class="header--left">
-            <a href="https://fortnite-api.com/" class="logo--link">
-                Fortnite-API
-            </a>
-        </div>
-        <div class="header--right">
-            <ul class="links-list">
-                <li><a href="./pages/SignIn.html">Sign In</a></li>
-                <li><a href="./pages/SignUp.html">Sign Up</a></li>
-                <li><a href="./pages/Cart.html">Cart</a></li>
-                <li><a href="./pages/Profile.html">Profile</a></li>
-            </ul>
-        </div>
+      <div class="header--left">
+        <a href="https://fortnite-api.com/" class="logo--link">
+          Fortnite-API
+        </a>
+      </div>
+      <div class="header--right">
+        <ul class="links-list">
+          <li><a href="./pages/SignIn.html">Sign In</a></li>
+          <li><a href="./pages/SignUp.html">Sign Up</a></li>
+          <li><a href="./pages/Cart.html">Cart</a></li>
+          <li><a href="./pages/Profile.html">Profile</a></li>
+        </ul>
+      </div>
     </header>
     <main class="main">
-        <section class="catalog">
-            <div class="container">
-                <div class="catalog--info">
-                    <h3 class="title">Catalog</h3>
-                </div>
-                <div class="products">
-                    
-                </div>
-            </div>
-        </section>
+      <section class="catalog">
+        <div class="container">
+          <div class="catalog--info">
+            <h3 class="title">Catalog</h3>
+          </div>
+          <div class="products"></div>
+        </div>
+      </section>
     </main>
     <script src="./scripts/Functions.js"></script>
     <script src="./scripts/Classes.js"></script>
     <script src="app.js"></script>
-</body>
+  </body>
 </html>
