some styles on the sign html file

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <ul class="links-list">
           <li><a href="./pages/SignIn.html">Sign In</a></li>
           <li><a href="./pages/SignUp.html">Sign Up</a></li>
-          <li><a href="./pages/Cart.html">Cart</a></li>
+          <li><a href="./pages/Cart.html" id="cartLink">Cart</a></li>
           <li><a href="./pages/Profile.html">Profile</a></li>
         </ul>
       </div>
