--- a/pages/SignIn.html
+++ b/pages/SignIn.html
@@ -5,8 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../styles/css/style.css">
+    <link rel="stylesheet" href="../styles/css/sign.css">
 </head>
 <body>
-    
+    <div class="sign-window">
+        <h3 class="sign-title">SignIn</h3>
+
+        <div class="inputs-section">
+            <div class="input-line">
+                <h5 class="input-name">name</h5>
+                <input type="text" class="input">
+            </div>
+            <div class="input-line">
+                <h5 class="input-name">login</h5>
+                <input type="text" class="input">
+            </div>
+            <div class="input-line">
+                <h5 class="input-name">password</h5>
+                <input type="text" class="input">
+            </div>
+            <div class="input-line">
+                <h5 class="input-name">password</h5>
+                <input type="text" class="input">
+            </div>
+        </div>
+    </div>
+    <script src="../scripts/Sign.js"></script>
 </body>
 </html>
