sign page animation

--- a/pages/SignIn.html
+++ b/pages/SignIn.html
@@ -14,19 +14,19 @@
 
         <div class="inputs-section">
             <div class="input-line">
-                <h5 class="input-name">name</h5>
+                <h5 class="input-name normal--position">name</h5>
                 <input type="text" class="input">
             </div>
             <div class="input-line">
-                <h5 class="input-name">login</h5>
+                <h5 class="input-name normal--position">login</h5>
                 <input type="text" class="input">
             </div>
             <div class="input-line">
-                <h5 class="input-name">password</h5>
+                <h5 class="input-name normal--position">password</h5>
                 <input type="text" class="input">
             </div>
             <div class="input-line">
-                <h5 class="input-name">password</h5>
+                <h5 class="input-name normal--position">verify passowrd</h5>
                 <input type="text" class="input">
             </div>
         </div>
