--- a/pages/SignIn.html
+++ b/pages/SignIn.html
@@ -4,33 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sign in</title>
     <link rel="stylesheet" href="../styles/css/style.css">
     <link rel="stylesheet" href="../styles/css/sign.css">
 </head>
 <body>
     <div class="sign-window">
-        <h3 class="sign-title">SignIn</h3>
-
+        <h3 class="sign-title">Sign In</h3>
         <div class="inputs-section">
             <div class="input-line">
-                <h5 class="input-name normal--position">name</h5>
+                <h4 class="input-name normal--position">name</h4>
                 <input type="text" class="input">
             </div>
             <div class="input-line">
-                <h5 class="input-name normal--position">login</h5>
+                <h4 class="input-name normal--position">login</h4>
                 <input type="text" class="input">
             </div>
             <div class="input-line">
-                <h5 class="input-name normal--position">password</h5>
-                <input type="text" class="input">
+                <h4 class="input-name normal--position">email</h4>
+                <input type="email" class="input">
             </div>
             <div class="input-line">
-                <h5 class="input-name normal--position">verify passowrd</h5>
-                <input type="text" class="input">
+                <h4 class="input-name normal--position">passowrd</h4>
+                <input type="password" class="input">
             </div>
         </div>
+        <button class="signBtn signUp-btn">Sign in</button>
+        <p class="alternative--pages">
+            don't have an account? <a class="link-page" href="./SignUp.html">Sign up</a>
+        </p>
+        <a href="../index.html" class="link-page">Home</a>
     </div>
+    <script src="../scripts/Classes.js"></script>
     <script src="../scripts/Sign.js"></script>
 </body>
 </html>
