added password show button and styles for it

--- a/pages/SignIn.html
+++ b/pages/SignIn.html
@@ -13,23 +13,32 @@
         <h3 class="sign-title">Sign In</h3>
         <div class="inputs-section">
             <div class="input-line">
-                <h4 class="input-name normal--position">name</h4>
-                <input type="text" class="input">
+                <div class="input-field">
+                    <h4 class="input-name normal--position">name</h4>
+                    <input type="text" class="input">
+                </div>
             </div>
             <div class="input-line">
-                <h4 class="input-name normal--position">login</h4>
-                <input type="text" class="input">
+                <div class="input-field">
+                    <h4 class="input-name normal--position">login</h4>
+                    <input type="text" class="input">
+                </div>
             </div>
             <div class="input-line">
-                <h4 class="input-name normal--position">email</h4>
-                <input type="email" class="input">
+                <div class="input-field">
+                    <h4 class="input-name normal--position">email</h4>
+                    <input type="email" class="input">
+                </div>
             </div>
             <div class="input-line">
-                <h4 class="input-name normal--position">passowrd</h4>
+                <div class="input-field">
+                    <h4 class="input-name normal--position">passowrd</h4>
                 <input type="password" class="input">
             </div>
+            <button class="show-btn"><img src="../imgs/visible-ico.svg" alt=""></button>
+            </div>
         </div>
-        <button class="signBtn signUp-btn">Sign in</button>
+        <button class="signBtn">Sign in</button>
         <p class="alternative--pages">
             don't have an account? <a class="link-page" href="./SignUp.html">Sign up</a>
         </p>
