almost did the signing business but have bug with going back to index page

--- a/pages/SignUp.html
+++ b/pages/SignUp.html
@@ -20,7 +20,7 @@
         <div class="input-line">
           <div class="input-field">
             <h4 class="input-name normal--position">passowrd</h4>
-            <input type="password" class="input" />
+            <input type="password" class="input" minlength="8" />
           </div>
           <button class="show-btn">
             <img src="../imgs/visible-ico.svg" alt="" />
