finally did the signing part of this. the only thing now is cart, pages and profile showing

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
       </div>
       <div class="header--right">
         <ul class="links-list">
-          <li><a href="./pages/SignIn.html">Sign In</a></li>
-          <li><a href="./pages/SignUp.html">Sign Up</a></li>
+          <li class="not-logged"><a href="./pages/SignIn.html">Sign In</a></li>
+          <li class="not-logged"><a href="./pages/SignUp.html">Sign Up</a></li>
           <li><a href="./pages/Cart.html" id="cartLink">Cart</a></li>
           <li><a href="./pages/Profile.html">Profile</a></li>
         </ul>
