--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
         <ul class="links-list">
           <li class="not-logged"><a href="./pages/SignIn.html">Sign In</a></li>
           <li class="not-logged"><a href="./pages/SignUp.html">Sign Up</a></li>
-          <li><a href="./pages/Cart.html" id="cartLink">Cart</a></li>
-          <li><a href="./pages/Profile.html">Profile</a></li>
+          <li class="is-logged">
+            <a href="./pages/Cart.html" id="cartLink">Cart</a>
+          </li>
+          <li class="is-logged"><a href="./pages/Profile.html">Profile</a></li>
         </ul>
       </div>
     </header>
@@ -44,9 +46,20 @@
       <section class="catalog">
         <div class="container">
           <div class="catalog--info">
-            <h3 class="title">Catalog</h3>
+            <h2 class="title">Catalog</h2>
+            <div class="catalog-business">
+              <input type="text" class="catalog-search" placeholder="search" />
+              <select name="" id="" class="sort">
+                <option value="0">default</option>
+                <option value="1">rarity descending</option>
+                <option value="2">rarity ascending</option>
+
+              </select>
+            </div>
           </div>
-          <div class="products"></div>
+          <div class="products">
+            
+          </div>
         </div>
       </section>
     </main>
