--- a/index.html
+++ b/index.html
@@ -50,9 +50,11 @@
             <div class="catalog-business">
               <input type="text" class="catalog-search" placeholder="search" />
               <select name="" id="" class="sort">
-                <option value="0">default</option>
-                <option value="1">rarity descending</option>
-                <option value="2">rarity ascending</option>
+                <option value="0">все</option>
+                <option value="1">редкость по убывание</option>
+                <option value="2">редкость по убывание</option>
+                <option value="3">цена по возрастанию</option>
+                <option value="4">цена по убывание</option>
 
               </select>
             </div>
