--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               <select name="" id="" class="sort">
                 <option value="0">все</option>
                 <option value="1">редкость по убывание</option>
-                <option value="2">редкость по убывание</option>
+                <option value="2">редкость по возрастанию</option>
                 <option value="3">цена по возрастанию</option>
                 <option value="4">цена по убывание</option>
 
