--- a/pages/Cart.html
+++ b/pages/Cart.html
@@ -9,6 +9,15 @@
 </head>
 
 <body>
+    <div class="delete-window none">
+        <div class="dw-content">
+           <h2> are you sure to delete product from the cart?</h2>
+        <div class="buttons">
+            <button class="commitBtn yes">yes</button>
+        <button class="commitBtn no">no</button>
+        </div>
+        </div>
+    </div>
     <header class="header">
         <div class="header--left">
             <a href="../index.html" class="logo--link">
@@ -22,16 +31,31 @@
         </div>
     </header>
     <main class="main">
-        <section class="cart">
-            <div class="container">
-                <div class="products">
-                    
+        <section class="catalog">
+          <div class="container">
+            <div class="catalog--info">
+              <h2 class="title">Cart</h2>
+              <div class="catalog-business">
+                <input type="text" class="catalog-search" placeholder="search" />
+                <select name="" id="" class="sort">
+                  <option value="0">как обычно</option>
+                  <option value="1">редкость по убывание</option>
+                  <option value="2">редкость по возрастанию</option>
+                  <option value="4">цена по убывание</option>
+                  <option value="3">цена по возрастанию</option>
+  
+                </select>
+              </div>
             </div>
+            <div class="products">
+              
+            </div>
+          </div>
         </section>
-    </main>
+      </main>
 
-    <script src="../scripts/Classes.js"></script>
-    <script src="../scripts/Functions.js"></script>
+      <script src="../scripts/Classes.js"></script>
+      <script src="../scripts/Functions.js"></script>
     <script src="../scripts/Cart.js"></script>
 </body>
 </html>
