--- a/pages/Profile.html
+++ b/pages/Profile.html
@@ -8,6 +8,17 @@
     <link rel="stylesheet" href="../styles/css/style.css">    
 </head>
 <body>
-    
+    <header class="header">
+        <div class="header--left">
+            <a href="../index.html" class="logo--link">
+                Home
+            </a>
+        </div>
+        <div class="header--right">
+            <ul class="links-list">
+                <li><a href="../pages/Cart.html">Cart</a></li>
+            </ul>
+        </div>
+    </header>
 </body>
 </html>
