--- a/pages/Profile.html
+++ b/pages/Profile.html
@@ -7,7 +7,6 @@
     <title>Profile</title>
     <link rel="stylesheet" href="../styles/css/style.css" />
     <link rel="stylesheet" href="../styles/css/profile.css">
-    <link rel="stylesheet" href="../styles/css/sign.csswj">
 </head>
   <body>
     <header class="header">
@@ -21,7 +20,7 @@
       </div>
     </header>
         <div class="sign-window">
-            <h3 class="sign-title">Sign In</h3>
+            <h3 class="sign-title">Profile</h3>
             <div class="inputs-section">
                 <div class="input-line">
                     <div class="input-field">
@@ -49,12 +48,13 @@
                 <button class="show-btn"><img src="../imgs/visible-ico.svg" alt=""></button>
                 </div>
             </div>
-            <button class="signBtn">Sign in</button>
-            <p class="alternative--pages">
-                don't have an account? <a class="link-page" href="./SignUp.html">Sign up</a>
-            </p>
-            <a href="../index.html" class="link-page">Home</a>
+            <button class="signBtn">Redact</button>
+            <button class="SignOut">SignOut</button>
+
         </div>
     </main>
+    <script src="../scripts/Classes.js"></script>
+    <script src="../scripts/Functions.js"></script>
+    <script src="../scripts/Sign.js"></script>
   </body>
 </html>
