--- a/pages/SignIn.html
+++ b/pages/SignIn.html
@@ -44,6 +44,7 @@
         </p>
         <a href="../index.html" class="link-page">Home</a>
     </div>
+    <script src="../scripts/Functions.js"></script>
     <script src="../scripts/Classes.js"></script>
     <script src="../scripts/Sign.js"></script>
 </body>
