added total cost of the cart

--- a/pages/Cart.html
+++ b/pages/Cart.html
@@ -34,7 +34,10 @@
         <section class="catalog">
           <div class="container">
             <div class="catalog--info">
-              <h2 class="title">Cart</h2>
+              <div class="catalog--info--main">
+                <h2 class="title">Cart</h2>
+                <h3 class="total">total: 0 VB</h3>
+              </div>
               <div class="catalog-business">
                 <input type="text" class="catalog-search" placeholder="search" />
                 <select name="" id="" class="sort">
@@ -54,8 +57,8 @@
         </section>
       </main>
 
-      <script src="../scripts/Classes.js"></script>
       <script src="../scripts/Functions.js"></script>
+      <script src="../scripts/Classes.js"></script>
     <script src="../scripts/Cart.js"></script>
 </body>
 </html>
