added BUY BUTTON and but not working

--- a/pages/Cart.html
+++ b/pages/Cart.html
@@ -37,6 +37,7 @@
               <div class="catalog--info--main">
                 <h2 class="title">Cart</h2>
                 <h3 class="total">total: 0 VB</h3>
+                <button class="buy-All">Buy All</button>
               </div>
               <div class="catalog-business">
                 <input type="text" class="catalog-search" placeholder="search" />
