some animation with jquery

--- a/index.html
+++ b/index.html
@@ -55,16 +55,14 @@
                 <option value="2">редкость по возрастанию</option>
                 <option value="4">цена по убывание</option>
                 <option value="3">цена по возрастанию</option>
-
               </select>
             </div>
           </div>
-          <div class="products">
-            
-          </div>
+          <div class="products"></div>
         </div>
       </section>
     </main>
+    
     <script src="./scripts/Functions.js"></script>
     <script src="./scripts/Classes.js"></script>
     <script src="app.js"></script>
