--- a/pages/Profile.html
+++ b/pages/Profile.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="../styles/css/profile.css">
 </head>
   <body>
+    <div class="confirmed--changes--window">
+      Changes are confirmed
+    </div>
     <header class="header">
       <div class="header--left">
         <a href="../index.html" class="logo--link"> Home </a>
@@ -53,6 +56,7 @@
 
         </div>
     </main>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script src="../scripts/Classes.js"></script>
     <script src="../scripts/Functions.js"></script>
     <script src="../scripts/Sign.js"></script>
