added animation with jquery for the cart

--- a/pages/Cart.html
+++ b/pages/Cart.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-  
+    <div class="window--successful--purchase">
+      вы успешно купили товары в корзине
+    </div>
     <header class="header">
         <div class="header--left">
             <a href="../index.html" class="logo--link">
@@ -58,6 +60,7 @@
         </div>
         </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
       <script src="../scripts/Functions.js"></script>
       <script src="../scripts/Classes.js"></script>
     <script src="../scripts/Cart.js"></script>
