added full pagination now i need to make some fixes on the search and sort

--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
             </div>
           </div>
           <div class="products"></div>
+          <div class="page--buttons">
+            aaa
+          </div>
         </div>
       </section>
     </main>
