--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <div class="catalog--info">
             <h2 class="title">Catalog</h2>
             <div class="catalog-business">
-              <input type="text" class="catalog-search" placeholder="search" />
+              <input type="text" class="catalog-search" oninput="searchFunc()" placeholder="search" />
               <select name="" id="" class="sort">
                 <option value="0">как обычно</option>
                 <option value="1">редкость по убывание</option>
@@ -58,9 +58,12 @@
               </select>
             </div>
           </div>
+          <div class="page--buttons">
+            
+          </div>
           <div class="products"></div>
           <div class="page--buttons">
-            aaa
+            
           </div>
         </div>
       </section>
